# My_project

./: .env.example  .gitignore  DATABASE_REVIEW.md  DBEAVER_CONNECTION_GUIDE.md  GIAI_DOAN_6_REDIS_COMPLETE.md  MARKET_ORDER_CHEATSHEET.md  MARKET_ORDER_COMPLETE.md  MARKET_ORDER_VISUAL_GUIDE.md  Makefile  PHASE_2_COMPLETE.md  PROJECT_README.md  README.md  SOLUTION_FOUND.md  START_ALL.ps1  STOP_LIMIT_TEST_GUIDE.md  TEST_TRADE_HISTORY.ps1  TRADE_HISTORY_COMPLETE.md  TRADE_HISTORY_TEST_GUIDE.md  TRADE_HISTORY_VERIFIED.md  check-stop-limit.ps1  deploy.ps1  docker-compose.prod.yml  docker-compose.yml  quick-seed.ps1  reset-database.ps1  seed-orderbook.ps1  test-database-connection.ps1  test-market-order.ps1  test-stop-limit.ps1  test-trade-history-simple.ps1
.github/workflows/: ci-cd.yml  migrations.yml
My_Project/: DATABASE_REVIEW.md  Makefile  PROJECT_README.md  README.md  docker-compose.yml
My_Project/services/frontend/: ENV.md  package-lock.json  package.json  tailwind.config.ts
My_Project/services/gateway/: Dockerfile  README.md  go.mod
My_Project/services/matching-engine/: Cargo.toml  Dockerfile  README.md
My_Project/services/matching-engine/src/: config.rs  engine.rs  main.rs  messaging.rs  orderbook.rs  types.rs
infrastructure/docker/postgres/: init.sql  pg_hba.conf
infrastructure/monitoring/prometheus/: alerts.yml  prometheus.yml
services/engine/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  MATCHING_DESIGN.md  Makefile  README.md  config.json  start.bat  start.ps1  test_redis.ps1
services/engine/benches/: orderbook_bench.rs
services/engine/src/: config.rs  engine.rs  main.rs  models.rs  orderbook.rs  snapshot.rs  test_client.rs  tests.rs
services/gateway/: .dockerignore  .env.example  API_SETUP.md  Dockerfile  GIAI_DOAN_3_PHAN_1_SUMMARY.md  README.md  SETUP_COMPLETE.md  SQLC_GUIDE.md  TEST_API_GUIDE.md  go.mod  go.sum  main.go  query.sql  sqlc.yaml
services/gateway/api/: server.go
services/gateway/examples/: sqlc_usage_example.go
services/gateway/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql  000002_add_currencies_and_optimizations.down.sql  000002_add_currencies_and_optimizations.up.sql  000003_add_accounts_and_transactions.down.sql  000003_add_accounts_and_transactions.up.sql  000003_add_transactions_table.down.sql  000005_add_stop_limit_support.down.sql  000005_add_stop_limit_support.up.sql
services/matching-engine/: Cargo.toml  Dockerfile  README.md
services/matching-engine/src/: config.rs  engine.rs  main.rs  messaging.rs  orderbook.rs  types.rs
web/: Dockerfile  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx  page_new.tsx  page_old.tsx
web/src/components/: Assets.tsx  BrokerSection.tsx  CalendarSection.tsx  Chart.tsx  (+13 more)
(+66 files in other folders)
