[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# 1. Tính toán chính xác (Financial Standard)
rust_decimal = "1.33"
rust_decimal_macros = "1.33"

# 2. Xử lý JSON & Serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 3. Asynchronous Runtime (Để chạy server sau này)
tokio = { version = "1", features = ["full"] }

# 4. Error handling
anyhow = "1.0"

# 5. NATS Message Queue Integration
async-nats = "0.33"
futures = "0.3"

# 6. Redis Cache Integration
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Additional binaries
[[bin]]
name = "matching-engine"
path = "src/main.rs"

[[bin]]
name = "test-client"
path = "src/test_client.rs"
